# zenguard-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/colabs/: zenguard-benchmarks.ipynb
zen-benchmarks/: zenguard-prompt-attacks-benchmark.py
zenguard-benchmarks/: __init__.py
zenguard_benchmarks/: __init__.py  zenguard-prompt-attacks-benchmark.py  zenguard_prompt_attacks_benchmark.py
