[tool.poetry]
name = "zen-benchmarks"
version = "0.0.1"
description = "This project tests ZenGuard AI against different datasets and benchmarks."
authors = ["Baur Krykpayev <baur@zenguard.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
tqdm = "^4.66.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
