[tool.poetry]
name = "zen-benchmarks"
version = "0.0.1"
description = "This project tests ZenGuard AI against different datasets and benchmarks."
authors = ["Baur Krykpayev <baur@zenguard.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
tqdm = "^4.66.5"
pandas = "^2.2.3"
datasets = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
