[tool.poetry]
name = "zenguard-benchmarks"
version = "0.0.10"
description = "Test ZenGuard AI against different datasets and benchmarks."
authors = ["Baur Krykpayev <baur@zenguard.ai>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "zenguard_benchmarks" }
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.2"
tqdm = "^4.66.5"
pandas = "^2.2.3"
datasets = "^3.0.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
